Add gc logging in docker